tests/samples/negative/functions/function_type_arg_mismatch.ax
module function_type_arg_mismatch;

type BinaryOp = fn(i32, i32) -> i32;

fn add(left: i32, right: i32) -> i32 {
    return left + right;
}

fn main() -> i32 {
    let op: BinaryOp = add;
    return op(true, 1);
}
